# TetWild

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  Args.h  BSPElements.h  BSPSubdivision.cpp  BSPSubdivision.h  CMakeLists-theirs.txt  CMakeLists.txt  DelaunayTetrahedralization.cpp  DelaunayTetrahedralization.h  Dockerfile  EdgeCollapser.cpp  EdgeCollapser.h  EdgeRemover.cpp  EdgeRemover.h  EdgeSplitter.cpp  EdgeSplitter.h  InoutFiltering.cpp  InoutFiltering.h  LocalOperations.cpp  LocalOperations.h  Mesh3DGen.cpp  Mesh3DGen.h  MeshConformer.cpp  MeshConformer.h  MeshRefinement.cpp  MeshRefinement.h  Preprocess.cpp  Preprocess.h  README.md  SimpleTetrahedralization.cpp  SimpleTetrahedralization.h  TetmeshElements.h  VertexSmoother.cpp  VertexSmoother.h  appveyor.yml  geogram_win.patch  heads.cpp  (+4 more)
.ci/conda/: bld.bat  build.sh  meta.yaml
ci/conda/: bld.bat  build.sh  meta.yaml  run_test.bat  run_test.sh
cmake/: DownloadProject.cmake  FindEigen.cmake  FindLIBIGL.cmake  TetWildDependencies.cmake  TetWildDownloadExternal.cmake  geogram.cmake
include/: SimpleTetrahedralization.h  TetmeshElements.h  VertexSmoother.h  heads.h  tetwild.h
include/tetwild/: Args.h  Logger.h  tetwild.h
ispc/: energy.h
misc/: CMakeLists.txt  levelset.cpp  mmg_remesh.cpp
pymesh/: MshLoader.cpp  MshSaver.cpp
src/: BSPSubdivision.cpp  DelaunayTetrahedralization.cpp  EdgeCollapser.cpp  EdgeCollapser.h  EdgeRemover.cpp  EdgeSplitter.cpp  InoutFiltering.cpp  LocalOperations.cpp  LocalOperations.h  MeshConformer.cpp  MeshRefinement.cpp  Preprocess.cpp  SimpleTetrahedralization.cpp  TetmeshElements.h  VertexSmoother.cpp  heads.cpp  heads.h  main.cpp  tetwild.cpp
src/tetwild/: BSPSubdivision.cpp  BSPSubdivision.h  CGALCommon.h  Common.cpp  Common.h  DelaunayTetrahedralization.cpp  DelaunayTetrahedralization.h  DisableWarnings.h  EdgeCollapser.cpp  EdgeCollapser.h  EdgeRemover.cpp  EdgeRemover.h  EdgeSplitter.cpp  EdgeSplitter.h  EnableWarnings.h  ForwardDecls.h  InoutFiltering.cpp  InoutFiltering.h  LocalOperations.cpp  LocalOperations.h  Logger.cpp  Logger.h  MeshConformer.cpp  MeshConformer.h  MeshRefinement.cpp  MeshRefinement.h  Preprocess.cpp  Preprocess.h  Quality.cpp  Quality.h  Serialization.h  SimpleTetrahedralization.cpp  SimpleTetrahedralization.h  State.cpp  State.h  TetmeshElements.cpp  TetmeshElements.h  Utils.cpp  Utils.h  VertexSmoother.cpp  (+4 more)
src/tetwild/geogram/: MeshAABB.cpp  MeshAABB.h  Utils.cpp  Utils.h  utils.cpp  utils.h
src/tetwild/mmg/: Remeshing.cpp  Remeshing.h  remeshing.cpp  remeshing.h  wrapper.cpp  wrapper.h
src/tetwild/mmg/internal/: Conversion.cpp  Conversion.h  utils.cpp  utils.h
test/: test_tetwild.py
test/models/: 12246.stl
